# discordWASM

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  pnpm-lock.yaml
.github/workflows/: ci.yml  deploy-signaling.yml  release.yml
apps/desktop/: README.md  dashboard-settings.txt  package.json  tsconfig.json  vite.config.ts  vite.worklet.config.ts  vitest.config.ts
apps/desktop/scripts/: inject-csp.mjs
apps/desktop/src/: App.css  App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  README.md  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: identity.rs  layout.rs  lib.rs  main.rs  tls.rs
apps/desktop/src-tauri/tests/: identity_tests.rs  layout_tests.rs
apps/desktop/src/__tests__/: setup.ts  signalingBus.test.ts
apps/desktop/src/api/: auth.api.ts  friends.ws.ts  http-client.ts  server.ws.ts
apps/desktop/src/components/: AuthenticatedView.tsx  Dashboard.tsx
apps/desktop/src/context/: AuthContext.tsx  BentoLayoutContext.tsx  ChatContext.tsx  DmContext.tsx  FriendsContext.tsx  ServerContext.tsx  StreamContext.tsx  ToastContext.tsx  VoiceContext.tsx
apps/desktop/src/hooks/: useAddFriendPopover.ts  useBentoDrag.ts  useBentoLayout.ts  useBentoResize.ts  useChannelManager.ts  useDashboardState.ts  useFriendsRealtime.ts  useNetworkStats.ts  useProfileSettings.ts  usePushToTalk.ts  useServerMembers.ts  useSfuConnection.ts  useVoiceActivity.ts  useVoiceGrid.ts
apps/desktop/src/lib/: config.ts  format-user-tag.ts  identity-tag.ts  map-identity.ts  signalingBus.ts  signalingTransport.ts  useTauriUpdater.ts  wasm-codec.ts
apps/desktop/src/models/: analyzerEntry.model.ts  authState.model.ts  avatarProps.model.ts  bottomActionsProps.model.ts  channelItemProps.model.ts  channelListProps.model.ts  channelPanelProps.model.ts  chatContextValue.model.ts  chatMessage.model.ts  createChannelModalProps.model.ts  extendedVoiceState.model.ts  gameInfo.model.ts  identity.model.ts  layout.model.ts  loginViewProps.model.ts  mainLayoutProps.model.ts  membersPanelProps.model.ts  selectInput.model.ts  server.model.ts  serverContext.model.ts  serverModalProps.model.ts  serverSettingsModalProps.model.ts  settingsModalProps.model.ts  sidebarContentProps.model.ts  sidebarPanelProps.model.ts  streamProps.model.ts  toast.model.ts  toastContextValue.model.ts  useChannelManagerProps.model.ts  useNetworkStatsProps.model.ts  usePushToTalkProps.model.ts  userBarProps.model.ts  userContextMenuProps.model.ts  userFooterProps.model.ts  voiceAudioRendererProps.model.ts  voiceGridProps.model.ts  voiceParticipantCardProps.model.ts  voicePeer.model.ts  voiceState.model.ts  (+1 more)
docker/: alert_rules.yml  alertmanager.yml  prometheus.yml
docs/: annexe-bdd-rncp.md
(+53 files in other folders)
