[workspace]
members = [
  "apps/desktop/src-tauri",
  "packages/core-wasm",
  "packages/signaling-server",
  "packages/void-sfu"
]
resolver = "2"

[workspace.package]
license = "BUSL-1.1"
authors = ["Raphael Taibi"]
repository = "https://github.com/Void-next-gen-WebRTC/Void"

[profile.release]
lto = true
opt-level = "z"