[package]
name = "desktop"
version = "0.1.20"
description = "A Tauri App"
authors = ["Raphael Taibi"]
edition = "2021"

[lib]
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri Core
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"

# Sérialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Networking & TLS
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
rustls = { version = "0.23", features = ["ring"] }
rustls-pki-types = "1.14.0"

# Cryptographie
sha2 = "0.10"
base64 = "0.22"

# Asynchrone
tokio = { version = "1", features = ["full"] }
tauri-plugin-websocket = "2.4.2"
tokio-tungstenite = { version = "0.28.0", features = ["rustls", "connect", "__rustls-tls"] }
tauri-plugin-log = "2.8.0"
