[package]
name = "desktop"
version = "0.1.16"
description = "A Tauri App"
authors = ["Raphael Taibi"]
edition = "2021"
license.workspace = true
repository.workspace = true

[lib]
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri Core
tauri = { version = "2", features = ["devtools", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-utils = "2"

# Sérialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Networking & TLS
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json"] }
rustls = { version = "0.23", features = ["ring"] }
rustls-pki-types = "1.14.0"
x509-parser = "0.16"

# Cryptographie
sha2 = "0.10"
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
argon2 = "0.5"
crc32fast = "1.5"

# Asynchrone
tokio = { version = "1", features = ["full"] }
tauri-plugin-websocket = "2.4.2"
tokio-tungstenite = { version = "0.28.0", features = ["rustls", "connect", "__rustls-tls"] }
tauri-plugin-log = "2.8.0"
log = "0.4"

# Windows-only: direct WebView2 permission handler hook (see src/webview_perms.rs)
[target.'cfg(target_os = "windows")'.dependencies]
webview2-com = "0.38"
windows = { version = "0.61", features = ["Win32_System_Com"] }

